--- a/src/Raccoon/Raccoon.csproj
+++ b/src/Raccoon/Raccoon.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFrameworks>net5.0;netcoreapp3.1</TargetFrameworks>
-		<Version>0.1.1</Version>
+		<Version>0.1.2</Version>
 		<StartupObject>Andtech.Raccoon.Program</StartupObject>
 	</PropertyGroup>
 
@@ -17,9 +17,9 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression></PackageLicenseExpression>
-		<AssemblyName>Raccoon</AssemblyName>
-		<AssemblyVersion>0.1.1.0</AssemblyVersion>
-		<FileVersion>0.1.1.0</FileVersion>
+		<AssemblyName>Andtech.Raccoon</AssemblyName>
+		<AssemblyVersion>0.1.2.0</AssemblyVersion>
+		<FileVersion>0.1.2.0</FileVersion>
 		<Product>Raccoon</Product>
 		<RepositoryUrl>https://github.com/AndtechGames/raccoon</RepositoryUrl>
 		<RootNamespace>Raccoon</RootNamespace>
@@ -42,6 +42,8 @@
 		<PackageProjectUrl>https://github.com/AndtechGames/raccoon</PackageProjectUrl>
 		<PackageTags>raccoon;coon;tool;unity;gitlab;cli;tanuki</PackageTags>
 		<NeutralLanguage>English</NeutralLanguage>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<Description>Convert Unity test results to GitLab test reports</Description>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Include="..\..\LICENSE">
