--- a/src/Raccoon/Raccoon.csproj
+++ b/src/Raccoon/Raccoon.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFrameworks>net5.0;netcoreapp3.1</TargetFrameworks>
-		<Version>2.0.0-preview</Version>
+		<Version>2.0.0</Version>
 		<StartupObject>Andtech.Raccoon.Program</StartupObject>
 	</PropertyGroup>
 
