--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 env:
   NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
-  NUGET_PROJECT_DIR: src/Raccoon/Raccoon.csproj
+  NUGET_PROJECT_DIR: src/Andtech.Raccoon/Andtech.Raccoon.csproj
   NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
 
 on:
